--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -7,12 +7,13 @@
   type="text"
   class="form-control"
   [(ngModel)]="serverName">
-<p>{{ serverName }}</p>
+<!--<p>{{ serverName }}</p>-->
 <button
   class="btn btn-primary"
   [disabled]="!allowNewServer"
-(click)="onCreateServer()">Add Server</button>
+  (click)="onCreateServer()">Add Server</button>
 <!--<p [innerText]="allowNewServer"></p>-->
-<p>{{ serverCreationStatus }}</p>
+<!--<p>{{ serverCreationStatus }}</p>-->
+<p *ngIf="serverCreated">Server was created, server is {{ serverName }}</p>
 <app-server></app-server>
 <app-server></app-server>
