--- a/src/app/server/server.component.html
+++ b/src/app/server/server.component.html
@@ -1,1 +1,5 @@
-<p [ngStyle]="{backgroundColor: getColor()}">{{ 'Server' }} with ID {{ serverID }} is {{ getServerStatus() }}</p>
+<p
+  [ngStyle]="{backgroundColor: getColor()}"
+  [ngClass]="{online: serverStatus === 'online'}">
+  {{ 'Server' }} with ID {{ serverID }} is {{ getServerStatus() }}
+</p>
