--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -15,5 +15,4 @@
 <!--<p [innerText]="allowNewServer"></p>-->
 <!--<p>{{ serverCreationStatus }}</p>-->
 <p *ngIf="serverCreated">Server was created, server is {{ serverName }}</p>
-<app-server></app-server>
-<app-server></app-server>
+<app-server *ngFor="let server of servers"></app-server>
